# maybe-async-cfg

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/: service_client.rs  service_client_both.rs
src/: debug.rs  doctests.rs  lib.rs  macros.rs  params.rs  utils.rs  visit_ext.rs  visitor_async.rs  visitor_content.rs
tests/: doctests.rs  unit-test-util.rs
tests/ui/: 01-maybe-async.rs  02-must-be-async.rs  03-must-be-sync.rs  04-unit-test-util.rs  05-replace-future-generic-type-with-output.rs  06-sync_impl_async_impl.rs
tests/ui/test_fail/: 01-empty-test.rs  01-empty-test.stderr  02-unknown-path.rs  02-unknown-path.stderr  03-async-gt2.rs  03-async-gt2.stderr  04-bad-sync-cond.rs  04-bad-sync-cond.stderr
